testsuite/escript/switch/switch19-duplicate-integer.err
switch19-duplicate-integer.src:5:5: error: case statement already has a selector for integer value 7.